test/types/tuple/ferguson/error-bounds.good
error-bounds.chpl:3: error: tuple index out-of-bounds error (3)
error-bounds.chpl:3: note: this tuple contains elements 1 to 2 (inclusive)
